fix swap estimation visibility, minor fix styles

--- a/assets/less/include/general.less
+++ b/assets/less/include/general.less
@@ -35,6 +35,8 @@
 html {
     overflow-y: scroll; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; -webkit-overflow-scrolling: touch;
     font-family: @body-font-family;
+    // Inter: disable 0x01 converting to cross sign
+    font-variant-ligatures: no-contextual;
     font-size: 16px;
     line-height: 1.42;
     color: @c-black;
@@ -131,20 +133,20 @@ blockquote {
 }
 
 
-
-@media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
+// not needed because no fancy animation is used
+//@media (prefers-reduced-motion: reduce) {
+//    html:focus-within {
+//        scroll-behavior: auto;
+//    }
+//    *,
+//    *::before,
+//    *::after {
+//        animation-duration: 0.01ms !important;
+//        animation-iteration-count: 1 !important;
+//        transition-duration: 0.01ms !important;
+//        scroll-behavior: auto !important;
+//    }
+//}
 
 
 
@@ -252,7 +254,7 @@ blockquote {
 
 
 // button-loader
-@loader-length: 12 * 3.14 * 2; // длина окружности
+@loader-length: 16 * 3.14 * 2; // длина окружности
 .loader {width: 40px; height: 40px; margin: auto; pointer-events: none; animation: loader-rotate 2s linear infinite;}
 .loader--button {
     position: absolute; left: 0; right: 0; top: 0; bottom: 0; opacity: 0; transition: 0.05s;
